@@ -15,7 +15,7 @@
           "version": "1.0.1",
           "type": "platform"
         },
-        "System.Data.Common": "4.1.0"
+        "System.Data.Common": "4.3.0"
       }
     },
     "net452": {
